# GCMMA-MMA-Python

./: .gitignore  setup.cfg
examples/: MMA_TOY2.py
test/: toy2_test.ipynb  toy2_test.py  toy2_test_dimensions.ipynb
