[metadata]
name=mmapy
version=0.1
description=Method of Moving Asymptotes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    scipy
    numpy
python_requires =  >=3.6


[options.packages.find]
where = src
